--- a/_tools/config.ini
+++ b/_tools/config.ini
@@ -8,6 +8,6 @@ description=Mis addons mas usados.[CR] Manjisoft 2017.
 
 
 [locations]
-url=https://raw.githubusercontent.com/Manjisoft/master/
+url=https://raw.githubusercontent.com/Manjisoft/manjisoft/master/
 output_path=repo/
 
